# internal/sp/entities/sp.entity.go
@@ -8,23 +8,24 @@ import (
 
 type ServiceProvider struct {
 	db.Model
-	Slug     string         `gorm:"uniqueIndex;not null"`
-	Name     string         `gorm:"not null"`
+	Slug     string           `gorm:"uniqueIndex;not null"`
+	Name     string           `gorm:"not null"`
 	Protocol types.SPProtocol `gorm:"not null"`
-	Enabled  bool           `gorm:"default:true"`
+	Enabled  bool             `gorm:"default:true"`
 }
 
 type OIDCClient struct {
 	gorm.Model
-	SPID              uint   `gorm:"uniqueIndex;not null"`
-	ClientID          string `gorm:"uniqueIndex;not null"`
-	ClientSecretHash  string
-	RedirectURIs      string `gorm:"default:'[]'"`
-	GrantTypes        string `gorm:"default:'[\"authorization_code\"]'"`
-	ResponseTypes     string `gorm:"default:'[\"code\"]'"`
-	Scopes            string `gorm:"default:'[\"openid\"]'"`
-	TokenEndpointAuth string `gorm:"default:'client_secret_basic'"`
-	PKCERequired      bool   `gorm:"default:false"`
+	SPID                   uint   `gorm:"uniqueIndex;not null"`
+	ClientID               string `gorm:"uniqueIndex;not null"`
+	ClientSecretHash       string
+	RedirectURIs           string `gorm:"default:'[]'"`
+	PostLogoutRedirectURIs string `gorm:"default:'[]'"`
+	GrantTypes             string `gorm:"default:'[\"authorization_code\"]'"`
+	ResponseTypes          string `gorm:"default:'[\"code\"]'"`
+	Scopes                 string `gorm:"default:'[\"openid\"]'"`
+	TokenEndpointAuth      string `gorm:"default:'client_secret_basic'"`
+	PKCERequired           bool   `gorm:"default:false"`
 }
 
 func (OIDCClient) TableName() string { return "oidc_clients" }
